fixed height overflow

--- a/src/styles/resume.css
+++ b/src/styles/resume.css
@@ -76,8 +76,6 @@
 
 .res-mainbox {
     position: relative;
-    height: 100%;
-
 }
 .res-overallTitle {
     position: absolute;
